minor changes to the html structure

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header">
         <h1>LINE INTERNET</h1>
-	<h2>Conectada com você</h2>
+	    <h2>Conectada com você</h2>
     </div>
     <div class="navbar">
         <a href="#top"><i class="fas fa-home"></i><span>Início</span></a>
@@ -39,22 +39,22 @@
                 <p>Ultimate speed for high-demand environments and professional use.</p>
             </div>
         </section>
-	<section>
-        <h2 id="clients">Central do Assinante</h2>
-        <p>Welcome to our Central do Assinante. Here you can find more information about our services and support.</p>
-        <a href="https://lineconect.sgp.tsmx.com.br/accounts/central/login?next=/central/home/" class="button">Ir para a Central do Assinante</a>
-	</section>
+        <section>
+            <h2 id="clients">Central do Assinante</h2>
+            <p>Welcome to our Central do Assinante. Here you can find more information about our services and support.</p>
+            <a href="https://lineconect.sgp.tsmx.com.br/accounts/central/login?next=/central/home/" class="button">Ir para a Central do Assinante</a>
+        </section>
         <section class="contact-form">
-	<h1 id="contact">Contato</h1>
-<form id="whatsappForm">
-  <label for="name">Nome</label>
-  <input type="text" id="name" name="name" required placeholder="Maria José">
+            <h1 id="contact">Contato</h1>
+            <form id="whatsappForm">
+            <label for="name">Nome</label>
+            <input type="text" id="name" name="name" required placeholder="Maria José">
 
-  <label for="message">Mensagem</label>
-  <textarea id="message" name="message" required placeholder="Gostaria de contratar um plano!"></textarea>
+            <label for="message">Mensagem</label>
+            <textarea id="message" name="message" required placeholder="Gostaria de contratar um plano!"></textarea>
 
-  <button class="button" type="submit">Falar no WhatsApp</button>
-</form>
+            <button class="button" type="submit">Falar no WhatsApp</button>
+            </form>
         </section>
         <section class="about-us">
 	    <h1 id="about">Sobre Nós</h1>
@@ -62,12 +62,12 @@
             <img src="./images/bg480.jpg" alt="Telecommunications Activity">
         </section>
     </div>
-<footer>
-  <div class="footer-content">
-    <p>Horário de atendimento de Segunda-feira a Sábado, 08:00 até 18:00</p>
-    <p>Entre em contato por ligação ou whatsapp: <a href="mailto:info@company.com">63 3225-2474</a></p>
-  </div>
-</footer>
+    <footer>
+    <div class="footer-content">
+        <p>Horário de atendimento de Segunda-feira a Sábado, 08:00 até 18:00</p>
+        <p>Entre em contato por ligação ou whatsapp: 63 3225-2474</p>
+    </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
