Cleared up semantics in the html

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="header">
+    <header>
         <h1>LINE INTERNET</h1>
 	    <h2>Conectada com você</h2>
-    </div>
-    <div class="navbar">
+    </header>
+    <nav>
         <a href="#top"><i class="fas fa-home"></i><span>Início</span></a>
         <a href="#tiers"><i class="fas fa-list"></i><span>Planos</span></a>
         <a href="#clients"><i class="fas fa-user"></i><span>Central do Assinante</span></a>
         <a href="#contact"><i class="fas fa-envelope"></i><span>Contato</span></a>
         <a href="#about"><i class="fas fa-info-circle"></i><span>Sobre Nós</span></a>
-    </div>
-    <div class="content">
+    </nav>
+    <main>
 	<h1 id="tiers">Planos de Internet</h1>
         <section class="services">
             <div class="service">
@@ -39,7 +39,7 @@
                 <p>Ultimate speed for high-demand environments and professional use.</p>
             </div>
         </section>
-        <section>
+        <section class="central-assinante">
             <h2 id="clients">Central do Assinante</h2>
             <p>Welcome to our Central do Assinante. Here you can find more information about our services and support.</p>
             <a href="https://lineconect.sgp.tsmx.com.br/accounts/central/login?next=/central/home/" class="button">Ir para a Central do Assinante</a>
@@ -61,11 +61,11 @@
             <p>A Line  Conect é uma empresa situada em Palmas, Tocantins. Foi fundada em 2009. Trabalhamos como provedores de internet via fibra na região de Taquaralto. Nosso principal objetivo é continuar crescendo e oferecendo sempre os melhores serviços aos nossos clientes.</p>
             <img src="./images/bg480.jpg" alt="Telecommunications Activity">
         </section>
-    </div>
+    </main>
     <footer>
     <div class="footer-content">
         <p>Horário de atendimento de Segunda-feira a Sábado, 08:00 até 18:00</p>
-        <p>Entre em contato por ligação ou whatsapp: 63 3225-2474</p>
+        <p>Entre em contato por ligação ou whatsapp: <a href="https://wa.me/556332252474?text=Oi">3225-2474</a></p>
     </div>
     </footer>
     <script src="script.js"></script>
