--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Line Internet - Conectada com você</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="planos.json">
 </head>
 <body>
     <header>
-        <h1>LINE INTERNET</h1>
-	    <h2>Conectada com você</h2>
+        <h1 id="box1">LINE INTERNET</h1>
+	    <h2 id="box2">Conectada com você</h2>
     </header>
     <nav>
         <a href="#top"><i class="fas fa-home"></i><span>Início</span></a>
